# DASTAL_CPE2

./: CMakeLists.txt  main.c
Module 1/: Activity 1.c  Activity 2.c  Activity 3.c  Activity 4.c
Module 1 Lessons/: Merging Arrays.c
Module 1/Module 1 Lessons/: Merging Arrays.c
Module 2/: Activity 1.c  Activity 2.c  Exercise 1.c
Module 2/Module 2 Lessons/: Loops and Pointers.c  Two-Dimensional Arrays.c
Module 3/: Activity 1.c  Activity 2.c  Activity 3.c
Module 4/: Activity 1.c  Activity 2.c
Module 5/: Activity 2.c  Activity 3.c  Activity 4.c  Activity 5.c
Module 6/: Activity 1.c
Practice Programs/Arrays/: Two-Dimensional Arrays.c
Practice Programs/Linked List/: Doubly Linked List.c  Linked List.c
Practice Programs/Stacks/: InfixToPrefix.c
Practice Programs/Strings/: String Manipulation.c
Practice Programs/try/: juju.c
