cmake_minimum_required(VERSION 3.20)
project(test_lang C)

set(CMAKE_C_STANDARD 99)


add_executable(Mod1Activity_1 "Module 1/Activity 1.c")
add_executable(Mod1Activity_2 "Module 1/Activity 2.c")
add_executable(Mod1Activity_3 "Module 1/Activity 3.c")
add_executable(Mod1Activity_4 "Module 1/Activity 4.c")

add_executable(Module1MergArr "Module 1/Module 1 Lessons/Merging Arrays.c")

add_executable(Mod2Activity_5 "Module 2/Activity 1.c")

add_executable(Module1LoopsPointers "Module 2/Module 2 Lessons/Loops and Pointers.c")